# model

./: README.md
model_solution/: README.md  can_reset.sh
model_solution/IP200_ROS/ip200_battery/: CMakeLists.txt  package.xml
model_solution/IP200_ROS/ip200_battery/launch/: batterysensing.launch
model_solution/IP200_ROS/ip200_battery/script/: BatterySensing.py
model_solution/IP200_ROS/ip200_core/launch/: a.launch  all.launch  ip200_core.launch  ip200_core_camera.launch  ip200_socketcan.launch
model_solution/IP200_ROS/ip200_description/urdf/: ip200_carto_ms.urdf  ip200_rowain.urdf
model_solution/IP200_ROS/ip200_motor_driver/src/: motor_ctrl.cpp  motor_driver.cpp
model_solution/IP200_ROS/ip200_msgs/: CMakeLists.txt  package.xml
model_solution/IP200_ROS/ip200_msgs/msg/: ArucoMarker.msg  ArucoMarkerVector.msg
model_solution/IP200_ROS/ip200_navigation/config/: base_local_planner_params.yaml  common_costmap_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml  params_a.yaml  params_b.yaml  params_docking.yaml
model_solution/IP200_ROS/ip200_navigation/launch/: amcl.launch  docking.launch  docking_coord.launch  doking1.launch  navigation.launch  patrol_nam.launch  realsense_control.launch
model_solution/IP200_ROS/ip200_navigation/scripts/: aruco_detect.py  aruco_detect_coord.py  aruco_detect_coord_test.py  aruco_docking.py  aruco_docking_pid.py  aruco_docking_pid_coord.py  aruco_docking_pid_stack.py  (+7 more)
model_solution/gl_ros_driver_udp/launch/: gl_ros_driver_udp.launch
model_solution/slam/launch/: my_robot.launch
(+12 files in other folders)
